--- a/BlindSwordmaster/blindswordmaster/src/main/res/values/strings.xml
+++ b/BlindSwordmaster/blindswordmaster/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">My Application</string>
-    <string name="dummy_button">Dummy Button</string>
+    <string name="app_name">SwordMaster</string>
+    <string name="dummy_button">Press to Start</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name= "caliberate">Please point your device forward.</string>
 
 </resources>
